修改模板文章

--- a/_posts/2017-02-06-快速搭建个人博客.md
+++ b/_posts/2017-02-06-快速搭建个人博客.md
@@ -16,7 +16,7 @@ tags:
 > 
 > [邱柏荧的的博客](http://qiubaiying.top)
 > 
-> 感谢[邱柏荧](https://github.com/qiubaiying/qiubaiying.github.io/wiki/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B)为大家提供如此细致、简洁的博客搭建教程。
+> 感谢邱柏荧为大家提供如此细致、简洁的[博客搭建教程](https://github.com/qiubaiying/qiubaiying.github.io/wiki/%E5%8D%9A%E5%AE%A2%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E6%95%99%E7%A8%8B)。
 
 # 前言
 从 Jekyll 到 GitHub Pages 中间踩了许多坑，终于把我的个人博客[BY Blog](http://qiubaiying.top)搭建出来了。。。
