--- a/_posts/2019-06-02-桨对多轴究竟有多大影响.md
+++ b/_posts/2019-06-02-桨对多轴究竟有多大影响.md
@@ -36,7 +36,8 @@ tags:
 
 ![](https://github.com/SuWeipeng/img/raw/master/4_ardupilot/arducopter_motors_4.png)
 
-篇末总结：
+篇末总结
+---
 1. 通过数据发现，让电机调速波动最大的因素是 `Yaw` 
 2. 桨距小的桨 t 易饱和（与控制代码怎么写很相关，不同的软件可能不一样，本测试只是对 ArduCopter 软件的数据记录）。
 3. 桨除了拉力外，还要考虑到桨能提供的扭矩（因为桨距是影响 Yaw 的重要因素）。
