--- a/_posts/2019-06-02-桨对多轴究竟有多大影响.md
+++ b/_posts/2019-06-02-桨对多轴究竟有多大影响.md
@@ -26,7 +26,7 @@ tags:
 > 2. 为了突出桨的影响，实测时用的是同一组 PID。<br>
 > 3. 对于有些桨稍差些的表现，可能调一下 PID 会好，但也很可能因动力问题怎么调都不理想。
 
-步骤3 ArduPilotLog 图形化展示飞行实时日志进行分析
+步骤3 [ArduPilotLog](https://github.com/SuWeipeng/ArduPilotLog) 图形化展示飞行实时日志进行分析
 ---
 > 注：一定要飞完一块电池，因为电池的电量情况对于电动多轴的动力影响是很大的。
 
@@ -41,6 +41,10 @@ tags:
 1. 通过数据发现，让电机调速波动最大的因素是 `Yaw` 
 2. 桨距小的桨 t 易饱和（与控制代码怎么写很相关，不同的软件可能不一样，本测试只是对 ArduCopter 软件的数据记录）。
 3. 桨除了拉力外，还要考虑到桨能提供的扭矩（因为桨距是影响 Yaw 的重要因素）。
+
+ArduPilotLog 下载
+---
+* ArduPilotLog 开源地址[点此链接](https://github.com/SuWeipeng/ArduPilotLog)，[ v1.0.1](https://github.com/SuWeipeng/ArduPilotLog/releases)下载：[百度网盘链接](https://pan.baidu.com/s/1hwnQ6RL8s9tQwfO6Shs_Xw)，提取码：x0iv 
 
 请我喝杯咖啡如何？
 ---
