--- a/_posts/2019-07-17-RTT架构训练二（信号量）.md
+++ b/_posts/2019-07-17-RTT架构训练二（信号量）.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      RT-Thread 消息队列
-subtitle:   Sugar 说说自己对消息队列的认识和使用
+title:      RTT架构训练二（信号量）
+subtitle:   Sugar 来说说：啥叫线程挂起？啥叫信号量，它是干啥用的？
 date:       2019-07-17
 author:     Sugar
 header-img: img/post-bg-coffee.jpeg
